// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled 1`] = `
<div
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  style={
    Object {
      "MozUserSelect": "none",
      "WebkitUserSelect": "none",
      "borderBottomLeftRadius": 2,
      "borderBottomRightRadius": 2,
      "borderTopLeftRadius": 2,
      "borderTopRightRadius": 2,
      "color": "black",
      "cursor": "default",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "marginBottom": 7.199999999999999,
      "marginTop": 7.199999999999999,
      "msHyphens": "auto",
      "opacity": 0.5,
      "overflowWrap": "break-word",
      "paddingBottom": 4.800000000000001,
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 4.800000000000001,
      "pointerEvents": "none",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "userSelect": "none",
      "whiteSpace": "pre-wrap",
    }
  }
  tabIndex={-1}
/>
`;

exports[`primary 1`] = `
<div
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  style={
    Object {
      "MozOsxFontSmoothing": "grayscale",
      "MozUserSelect": "none",
      "WebkitFontSmoothing": "antialiased",
      "WebkitUserSelect": "none",
      "backgroundColor": "blue",
      "borderBottomLeftRadius": 2,
      "borderBottomRightRadius": 2,
      "borderTopLeftRadius": 2,
      "borderTopRightRadius": 2,
      "color": "white",
      "cursor": "pointer",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": 600,
      "lineHeight": "24px",
      "marginBottom": 7.199999999999999,
      "marginTop": 7.199999999999999,
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "paddingBottom": 4.800000000000001,
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 4.800000000000001,
      "pointerEvents": "auto",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "userSelect": "none",
      "whiteSpace": "pre-wrap",
    }
  }
  tabIndex={0}
/>
`;

exports[`primary outline 1`] = `
<div
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  style={
    Object {
      "MozUserSelect": "none",
      "WebkitUserSelect": "none",
      "borderBottomColor": "blue",
      "borderBottomLeftRadius": 2,
      "borderBottomRightRadius": 2,
      "borderBottomWidth": 1,
      "borderLeftColor": "blue",
      "borderLeftWidth": 1,
      "borderRightColor": "blue",
      "borderRightWidth": 1,
      "borderStyle": "solid",
      "borderTopColor": "blue",
      "borderTopLeftRadius": 2,
      "borderTopRightRadius": 2,
      "borderTopWidth": 1,
      "color": "blue",
      "cursor": "pointer",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "marginBottom": 7.199999999999999,
      "marginTop": 7.199999999999999,
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "paddingBottom": 3.8000000000000007,
      "paddingLeft": 23,
      "paddingRight": 23,
      "paddingTop": 3.8000000000000007,
      "pointerEvents": "auto",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "userSelect": "none",
      "whiteSpace": "pre-wrap",
    }
  }
  tabIndex={0}
/>
`;

exports[`render 1`] = `
<div
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  style={
    Object {
      "MozUserSelect": "none",
      "WebkitUserSelect": "none",
      "borderBottomLeftRadius": 2,
      "borderBottomRightRadius": 2,
      "borderTopLeftRadius": 2,
      "borderTopRightRadius": 2,
      "color": "black",
      "cursor": "pointer",
      "display": "inline",
      "flexDirection": "column",
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
      "fontSize": 16,
      "fontStyle": "normal",
      "fontWeight": "normal",
      "lineHeight": "24px",
      "marginBottom": 7.199999999999999,
      "marginTop": 7.199999999999999,
      "msHyphens": "auto",
      "overflowWrap": "break-word",
      "paddingBottom": 4.800000000000001,
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 4.800000000000001,
      "pointerEvents": "auto",
      "position": "relative",
      "textAlign": "left",
      "textDecoration": "none",
      "userSelect": "none",
      "whiteSpace": "pre-wrap",
    }
  }
  tabIndex={0}
/>
`;
